logs/setuptools-epydoc.log
Listing '.'...
Listing './bin'...
Compiling './bin/apirst2html.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/epydoc'...
Compiling './lib/python3.5/site-packages/epydoc/apidoc.py'...
***   File "./lib/python3.5/site-packages/epydoc/apidoc.py", line 132
    idents = [`ident` for ident in self._identifiers]
              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/epydoc/cli.py'...
***   File "./lib/python3.5/site-packages/epydoc/cli.py", line 428
    print '\n' + msg.rstrip() + '\n'
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/epydoc/docbuilder.py'...
***   File "./lib/python3.5/site-packages/epydoc/docbuilder.py", line 102
    except Exception, exc:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/epydoc/docintrospecter.py'...
***   File "./lib/python3.5/site-packages/epydoc/docintrospecter.py", line 866
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/epydoc/docparser.py'...
***   File "./lib/python3.5/site-packages/epydoc/docparser.py", line 230
    except ValueError, e: raise ImportError('%s' % e)
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/epydoc/docstringparser.py'...
***   File "./lib/python3.5/site-packages/epydoc/docstringparser.py", line 245
    except ValueError, e: field_warnings.append(str(e))
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/epydoc/docwriter'...
Compiling './lib/python3.5/site-packages/epydoc/docwriter/dotgraph.py'...
***   File "./lib/python3.5/site-packages/epydoc/docwriter/dotgraph.py", line 250
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/epydoc/docwriter/html.py'...
***   File "./lib/python3.5/site-packages/epydoc/docwriter/html.py", line 150
    try: exec pysrc in globals(), localdict
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/epydoc/docwriter/html_colorize.py'...
***   File "./lib/python3.5/site-packages/epydoc/docwriter/html_colorize.py", line 463
    self.linenum_size = len(`num_lines+1`)
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/epydoc/docwriter/plaintext.py'...
***   File "./lib/python3.5/site-packages/epydoc/docwriter/plaintext.py", line 33
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/epydoc/docwriter/xlink.py'...
***   File "./lib/python3.5/site-packages/epydoc/docwriter/xlink.py", line 394
    except IndexError, exc:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/epydoc/gui.py'...
***   File "./lib/python3.5/site-packages/epydoc/gui.py", line 241
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/epydoc/log.py'...
***   File "./lib/python3.5/site-packages/epydoc/log.py", line 125
    if level >= self.threshold: print message
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/epydoc/markup'...
Compiling './lib/python3.5/site-packages/epydoc/markup/__init__.py'...
***   File "./lib/python3.5/site-packages/epydoc/markup/__init__.py", line 166
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/epydoc/markup/epytext.py'...
***   File "./lib/python3.5/site-packages/epydoc/markup/epytext.py", line 1463
    return ('SEC'+`seclevel`+'>|'+(indent-8)*' ' + str + '\n' +
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/epydoc/markup/plaintext.py'...
***   File "./lib/python3.5/site-packages/epydoc/markup/plaintext.py", line 31
    if text is None: raise ValueError, 'Bad text value (expected a str)'
                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/epydoc/markup/restructuredtext.py'...
***   File "./lib/python3.5/site-packages/epydoc/markup/restructuredtext.py", line 410
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/epydoc/test'...
Compiling './lib/python3.5/site-packages/epydoc/test/util.py'...
***   File "./lib/python3.5/site-packages/epydoc/test/util.py", line 64
    print s
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/epydoc/util.py'...
***   File "./lib/python3.5/site-packages/epydoc/util.py", line 279
    except IOError, e:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/epydoc-3.0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools_epydoc'...
Listing './lib/python3.5/site-packages/setuptools_epydoc-0.2.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
